Lab html files were taken inside lab folder

--- a/src/main/webapp/admin_fees.xhtml
+++ b/src/main/webapp/admin_fees.xhtml
@@ -36,9 +36,9 @@
                             </p:panel>
                             <p:panel header="Manage Packages" styleClass=".grid1.ui-panel" >
                                 <h:panelGrid columns="1" columnClasses="grid1 grid1" >
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Package Names" action="lab_package_name" onclick="onSubmitButton();"/>
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Add Item to Package" action="lab_package_item" onclick="onSubmitButton();"/>
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Manage Package Prices" action="lab_package_item_prices" onclick="onSubmitButton();"/>
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Package Names" action="/lab/package_name" onclick="onSubmitButton();"/>
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Add Item to Package" action="/lab/package_item" onclick="onSubmitButton();"/>
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Manage Package Prices" action="/lab/package_item_prices" onclick="onSubmitButton();"/>
                                 </h:panelGrid>
                             </p:panel>
                              <p:panel header="Manage Medical Packages" styleClass=".grid1.ui-panel" >
