--- a/src/main/webapp/admin_mange_institutions_index.xhtml
+++ b/src/main/webapp/admin_mange_institutions_index.xhtml
@@ -14,13 +14,13 @@
                         <h:panelGrid columns="3" styleClass="alignTop" >
 
                             <p:panel header="Items" >
-                                <p:commandButton styleClass="linkButton" ajax="false" value="Institution" action="lab_institution" onclick="onSubmitButton();"/>
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="Institution Branch" action="lab_institution_branch" onclick="onSubmitButton();"/>
+                                <p:commandButton styleClass="linkButton" ajax="false" value="Institution" action="/lab/institution" onclick="onSubmitButton();"/>
+                                <p:commandButton  styleClass="linkButton" ajax="false" value="Institution Branch" action="/lab/institution_branch" onclick="onSubmitButton();"/>
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Departments" action="/management/department" onclick="onSubmitButton();"/>
 
 
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="Collecting Centres" action="lab_collecting_centre" onclick="onSubmitButton();"/>
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="Credit Companies" action="lab_credit_company" onclick="onSubmitButton();"/>
+                                <p:commandButton  styleClass="linkButton" ajax="false" value="Collecting Centres" action="/lab/collecting_centre" onclick="onSubmitButton();"/>
+                                <p:commandButton  styleClass="linkButton" ajax="false" value="Credit Companies" action="/lab/credit_company" onclick="onSubmitButton();"/>
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Area" action="area" onclick="onSubmitButton();"/>
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Add Signature for staff" action="admin_staff_signature" onclick="onSubmitButton();"/>
 
