--- a/src/main/webapp/dataAdmin/report_entered_data.xhtml
+++ b/src/main/webapp/dataAdmin/report_entered_data.xhtml
@@ -18,9 +18,9 @@
                             <h:panelGrid columns="1">
                                 <p:panel header="Investigation" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
                                     <h:panelGrid columns="1">
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Investigation List" action="lab_investigation_list" onclick="onSubmitButton();"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Investigation Fee List" action="lab_investigation_list_fee" onclick="onSubmitButton();"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Investigation With Fees" action="lab_investigation_list_fee_1" onclick="onSubmitButton();"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Investigation List" action="/lab/investigation_list" onclick="onSubmitButton();"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Investigation Fee List" action="/lab/investigation_list_fee" onclick="onSubmitButton();"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Investigation With Fees" action="/lab/investigation_list_fee_1" onclick="onSubmitButton();"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Investigation And Sevice List For OPD" action="opd_service_and_investgation_department_list" onclick="onSubmitButton();"/>
                                     </h:panelGrid>
                                 </p:panel>
