--- a/src/main/webapp/lab/administration_extra.xhtml
+++ b/src/main/webapp/lab/administration_extra.xhtml
@@ -26,7 +26,7 @@
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Find Master Items" action="#{investigationController.changeIxReportedAsToMasterItem}" onclick="onSubmitButton();" />
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Ix Cats to Cats Categories" action="#{investigationController.catToIxCat}" onclick="onSubmitButton();" />
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Add Worksheet Items" action="#{investigationController.reportItemsToWorksheetItems}" onclick="onSubmitButton();" />
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="Copy Ix" action="/lab/lab_copy" onclick="onSubmitButton();" />
+                                <p:commandButton  styleClass="linkButton" ajax="false" value="Copy Ix" action="/lab/copy" onclick="onSubmitButton();" />
                             </h:panelGrid>
                         </p:panel>
 
