--- a/src/main/webapp/lab/investigation.xhtml
+++ b/src/main/webapp/lab/investigation.xhtml
@@ -25,7 +25,7 @@
                             <p:ajax event="change"   update="@all" process="@this" >
                             </p:ajax>
                         </p:selectOneMenu>
-                        <p:commandButton ajax="false" value="Back" action="/lab_administration" style="float: right;"></p:commandButton>
+                        <p:commandButton ajax="false" value="Back" action="/lab/administration" style="float: right;"></p:commandButton>
                     </f:facet>
 
                     <h:panelGrid id ="gpVeda" columns="3" styleClass="alignTop" >
