--- a/src/main/webapp/reportLab/investigation_counts.xhtml
+++ b/src/main/webapp/reportLab/investigation_counts.xhtml
@@ -73,7 +73,7 @@
                                                      fontName="Courier New"  />
                                     </p:commandButton> 
 
-                                    <p:commandButton value="Back" ajax="false" styleClass="noPrintButton" action="lab_summeries_index" >
+                                    <p:commandButton value="Back" ajax="false" styleClass="noPrintButton" action="/lab/summeries_index" >
                                     </p:commandButton> 
 
 
