--- a/src/main/webapp/admin_items.xhtml
+++ b/src/main/webapp/admin_items.xhtml
@@ -20,7 +20,7 @@
 
 
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Investigations" action="/lab_investigation" onclick="onSubmitButton();"/>
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Investigation Fees" action="/lab_investigation_fee" onclick="onSubmitButton();"/>
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Investigation Fees" action="/lab/investigation_fee" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Service Categories" action="/opd_service_category" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Service Subcategories" action="/opd_service_subcategory" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Service" action="/opd_service" onclick="onSubmitButton();"/>
@@ -59,7 +59,7 @@
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Bulk Delete of Services" action="opd_service_list_to_remove" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Bulk Un-Delete of Services" action="/common/item_bulk_un_delete" onclick="onSubmitButton();"/>
 
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Bulk Delete of Investigations" action="lab_investigation_list_to_remove" onclick="onSubmitButton();"/>
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Bulk Delete of Investigations" action="/lab/investigation_list_to_remove" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Bulk Un-Delete of Investigations" action="/common/investigation_bulk_un_delete" onclick="onSubmitButton();"/>
                                     
                                 </h:panelGrid>
