--- a/src/main/webapp/lab/dynamic_labels.xhtml
+++ b/src/main/webapp/lab/dynamic_labels.xhtml
@@ -93,7 +93,7 @@
                             <p:panelGrid columns="1" >
                                 <f:facet name="header" >
                                     <p:commandButton value="Excel" ajax="false">
-                                        <pe:exporter type="xlsx" target="tbl" fileName="lab_dianamic_lables"  />
+                                        <pe:exporter type="xlsx" target="tbl" fileName="/lab/dianamic_lables"  />
                                     </p:commandButton>
                                 </f:facet>
                                 <p:dataTable id="tbl" value="#{investigationItemDynamicLabelController.dynamicLabels}" var="f" >
