--- a/src/main/webapp/lab/investigation_format_move_all.xhtml
+++ b/src/main/webapp/lab/investigation_format_move_all.xhtml
@@ -16,7 +16,7 @@
                     <p:panel header="Investigation">
                         <f:facet name="header" >
                             <h:outputText value="Investigation" ></h:outputText>
-                            <p:commandButton ajax="false" action="/lab_administration" value="Back" style="float: right;" ></p:commandButton>
+                            <p:commandButton ajax="false" action="/lab/administration" value="Back" style="float: right;" ></p:commandButton>
                         </f:facet>
                         <h:panelGrid columns="1" >
                             <h:panelGroup >
