--- a/src/main/webapp/lab/search_for_reporting_1.xhtml
+++ b/src/main/webapp/lab/search_for_reporting_1.xhtml
@@ -19,8 +19,8 @@
                                 <h:outputLabel value="To Date"/>
                                 <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
                                 </p:calendar>
-                                <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createPatientInvestigationsTable()}"/>
-                                <p:commandButton id="btnSearch2" ajax="false" value="Search All" action="#{searchController.createPatientInvestigationsTableAll()}"/>
+                                <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createPatientInvestigationsTable()}" onclick="onSubmitButton();" />
+                                <p:commandButton id="btnSearch2" ajax="false" value="Search All" action="#{searchController.createPatientInvestigationsTableAll()}" onclick="onSubmitButton();" />
                                 <p:spacer height="30"/><h:outputLabel/>
                                 <h:outputLabel/><h:outputLabel/>
                                 <h:outputLabel/> <h:outputLabel/>
@@ -28,7 +28,7 @@
                                 <h:outputLabel value="Bill No"/>
                                 <h:outputLabel value="Patient Name"/>
                                 <h:outputLabel value="Patient Phone"/>                               
-                                <h:outputLabel value="Investigation Value"/>
+                                <h:outputLabel value="Investigation Name"/>
                                 <h:outputLabel/><h:outputLabel/>
                                 <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
                                 <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}" />
@@ -38,8 +38,6 @@
                             </h:panelGrid>
                         </f:facet>
                         <p:defaultCommand target="btnSearch" />
-
-
 
                         <p:dataTable  id="tblBills" value="#{searchController.patientInvestigations}" var="pi"  >
 
@@ -53,7 +51,7 @@
                                     <f:setPropertyActionListener value="#{pi.billItem.bill.patient}" target="#{patientController.current}"/>
                                 </h:commandLink>
                                 <br/>
-                                <h:outputLabel value="Age : #{pi.billItem.bill.patient.age},&nbsp;#{pi.billItem.bill.patient.person.sex}," >
+                                <h:outputLabel value="Age : #{pi.billItem.bill.patient.person.dob} #{pi.billItem.bill.patient.age},&nbsp;#{pi.billItem.bill.patient.person.sex}," >
                                 </h:outputLabel>
                                 <br/>
                                 <h:outputLabel value="Phone : #{pi.billItem.bill.patient.person.phone}" >
@@ -97,22 +95,22 @@
                             </p:column>
                             <p:column  headerText="Actions"  styleClass="alignTop" >
                                 <p:panelGrid columns="1" rendered="#{pi.billItem.bill.cancelled ne true and pi.billItem.refunded ne true }" >
-                                    <p:commandButton process="btnSample" update="tblBills"  rendered="#{!pi.collected}"   id="btnSample" value="Collect Sample" action="#{patientInvestigationController.markAsSampled}" >
+                                    <p:commandButton process="btnSample" update="tblBills"  rendered="#{!pi.collected}"   id="btnSample" value="Collect Sample" action="#{patientInvestigationController.markAsSampled}" onclick="onSubmitButton();"  >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientInvestigationController.current}"></f:setPropertyActionListener>
                                     </p:commandButton>
-                                    <p:commandButton process="btnReceive" update="tblBills"  rendered="#{pi.received ne true}"   id="btnReceive" value="Receive Sample" action="#{patientInvestigationController.markAsReceived()}" >
+                                    <p:commandButton process="btnReceive" update="tblBills"  rendered="#{pi.received ne true}"   id="btnReceive" value="Receive Sample" action="#{patientInvestigationController.markAsReceived()}" onclick="onSubmitButton();" onclick="onSubmitButton();"   >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientInvestigationController.current}"></f:setPropertyActionListener>
                                     </p:commandButton>
-                                    <p:commandButton ajax="false" id="btnPrintWorksheets" value="Worksheet" action="lab_single_worksheet">
+                                    <p:commandButton ajax="false" id="btnPrintWorksheets" value="Worksheet" action="/lab/single_worksheet" onclick="onSubmitButton();" >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientInvestigationController.current}" ></f:setPropertyActionListener>
                                     </p:commandButton>
-                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="Result Entry" action="#{patientReportController.lastPatientReport(pi)}" >
+                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="Result Entry"  action="#{patientReportController.lastPatientReport(pi)}" onclick="onSubmitButton();" >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientReportController.currentPtIx}"></f:setPropertyActionListener>
                                     </p:commandButton>
-                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="New Result" action="/lab_patient_report" actionListener="#{patientReportController.createNewReport(pi)}" >
+                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="New Result" action="/lab_patient_report" actionListener="#{patientReportController.createNewReport(pi)}" onclick="onSubmitButton();" >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientReportController.currentPtIx}"></f:setPropertyActionListener>
                                     </p:commandButton>
-                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="New Format" action="/lab_ix_for_ix" >
+                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="New Format" action="/lab_ix_for_ix" onclick="onSubmitButton();"  >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientReportController.currentPtIx}"></f:setPropertyActionListener>
                                         <f:setPropertyActionListener value="#{pi}" target="#{itemForItemController.patientIx}"></f:setPropertyActionListener>
                                     </p:commandButton>
@@ -123,7 +121,7 @@
 
                                 <p:dataTable value="#{pi.patientReports}" var="dpr" rendered="#{pi.patientReports.size() ne 0}" >
                                     <p:column headerText="Actions">
-                                        <p:commandLink style="text-decoration:underline;" value="To View / Edit / Approve / Print  " ajax="false" action="lab_patient_report">
+                                        <p:commandLink style="text-decoration:underline;" value="To View / Edit / Approve / Print  " ajax="false" action="/lab/patient_report">
                                             <f:setPropertyActionListener value="#{dpr}" target="#{patientReportController.currentPatientReport}"></f:setPropertyActionListener>
                                         </p:commandLink>
                                     </p:column>
