--- a/src/main/webapp/lab/search_for_reporting_ondemand.xhtml
+++ b/src/main/webapp/lab/search_for_reporting_ondemand.xhtml
@@ -212,7 +212,7 @@
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientInvestigationController.current}"></f:setPropertyActionListener>
                                         <p:graphicImage library="image" styleClass="standedicon" name="receive.jpeg" ></p:graphicImage>
                                     </p:commandLink>
-                                    <p:commandLink ajax="false" id="btnPrintWorksheets" action="lab_single_worksheet" disabled="#{pi.billItem.bill.cancelled or pi.billItem.transRefund}">
+                                    <p:commandLink ajax="false" id="btnPrintWorksheets" action="/lab/single_worksheet" disabled="#{pi.billItem.bill.cancelled or pi.billItem.transRefund}">
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientInvestigationController.current}" ></f:setPropertyActionListener>
                                         <p:graphicImage library="image" styleClass="standedicon" name="worksheet.gif" ></p:graphicImage>
                                     </p:commandLink>
@@ -292,16 +292,16 @@
                                             <p:outputLabel value="#{dpr.retired}" rendered="#{dpr.retired eq true ? 'noDisplayRow':''}"/>
                                             <p:commandLink id="cmdOldReport" style="text-decoration:underline;" 
                                                            value="#{dpr.item.name}" 
-                                                           ajax="false" action="lab_patient_report">
+                                                           ajax="false" action="/lab/patient_report">
                                                 <f:setPropertyActionListener value="#{dpr}" target="#{patientReportController.currentPatientReport}"></f:setPropertyActionListener>
                                             </p:commandLink>
 
-                                            <p:commandLink id="cmdOldReportEdit" ajax="false" action="lab_patient_report">
+                                            <p:commandLink id="cmdOldReportEdit" ajax="false" action="/lab/patient_report">
                                                 <f:setPropertyActionListener value="#{dpr}" target="#{patientReportController.currentPatientReport}"></f:setPropertyActionListener>
                                                 <p:graphicImage library="image" styleClass="standedicon" name="data_entry.png" ></p:graphicImage>
                                             </p:commandLink>
 
-                                            <p:commandLink id="cmdOldReportPrint" ajax="false" action="/lab/lab_patient_report_print">
+                                            <p:commandLink id="cmdOldReportPrint" ajax="false" action="/lab/patient_report_print">
                                                 <p:graphicImage library="image" name="print.jpg" styleClass="standedicon" ></p:graphicImage>
                                                 <f:setPropertyActionListener value="#{dpr}" target="#{patientReportController.currentPatientReport}"></f:setPropertyActionListener>
                                             </p:commandLink>
